# gpu-checkpoint

./: .gitignore  CMakeLists.txt  LICENSE  README.md  todo.md
include/common/cuda/: communication.h  cpu-elf2.h  cuda_subset.h  fatbinary.h  macro_common.h  trace_profile.h
include/gpu-proxy/cuda/: hidden_table.h  memory_manage.h
include/hijacker/: dlsym_hook.h
include/hijacker/cuda/: communicator.h  cuda_hidden.h  cuda_hook.h
src/gpu-proxy/: CMakeLists.txt
src/gpu-proxy/cuda/: cudaproxy.cu  hidden_table.cpp
src/hijacker/: CMakeLists.txt  dlsym_hook.cpp
src/hijacker/cuda/: communicator.cpp  cpu-elf2.cpp  cuda_hidden.cpp  cuda_hook.cpp  cudart_hook.cpp
test/: CMakeLists.txt  test.cpp  test.cu
test/binary/: test.fatbin
tools/CodeGernerator/: export_cuda_h.py  export_lamda.py  generate_def.py
